# youtube-timeline-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  llm.py  llm_model.py  main.py  main.sh  main_srt.srt  pyproject.toml  run-llm.sh  try_with_openai_model.py  utils.py
.github/workflows/: python-tests.yml
chatbot-ui/: 404.html
llm_video_timeline_description/: llm.py  llm_processing.py  logger.py  main.py  message.py  postprocessing.py  prompt.py  utils.py  video_srt.py
llm_video_timeline_description/static/: script.js  style.css
llm_video_timeline_description/templates/: index.html
scripts/: README.md  run-llm.sh  web.sh
scripts/chatbot-ui/: index.html
scripts/chatbot-ui/_next/static/6g4oD9UZNPFYuPRDzdrDz/: _buildManifest.js
scripts/chatbot-ui/_next/static/chunks/pages/: index-601572f5aa2ea426.js
tests/: test_utils.py  test_video_srt.py
youtube_timeline_generator/: llm.py  llm_processing.py  main.py  postprocessing.py  utils.py
youtube_timeline_generator/static/: script.js  style.css
youtube_timeline_generator/templates/: index.html
